# asp-weather-app

./: .gitignore  README.md  package.json  turbo.json
.github/_workflows/: check_deploy.yml  check_deploy.yml.bkp
.github/workflows/: check_deploy.yml  check_deploy.yml.bkp
apps/client/: .dockerignore  Dockerfile  angular.json  eslint.config.js  fly.toml  kind-deploy.yml  kind-service.yml  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.e2e.json  tsconfig.json  tsconfig.next.json  tsconfig.spec.json  vite.config.ts  vitest.config.ts
apps/client/src/: index.html  main.ts  server.ts
apps/client/src/app/: app.config.ts  app.html  app.routes.server.ts  app.routes.ts  app.ts
apps/client/src/common/types/: api.ts  css.ts  dom.ts  etc.ts  forms.ts
apps/client/src/core/constants/: index.ts
apps/client/src/core/hooks/: use_pop.ts  (+3 more)
apps/client/src/scripts_env/: gen_env.ts
apps/client/src/styles/: index.scss
apps/client/tests/E2E/: base.test.ts  health_check.test.ts
apps/client/tests/unit/: camel_case.test.ts  health_check.test.ts  path.test.ts  snake_case.test.ts
apps/server/: fly.toml  kind-deploy.yml  kind-service.yml  package.json  settings.gradle.kts
apps/server/app/: build.gradle.kts
apps/server/gradle/: libs.versions.toml
postman/: ENV_VAR.postman_environment.json  weather_app.postman_collection.json
scripts/: env.zsh  svg.zsh
sync_env_cli/: pyproject.toml
sync_env_cli/src/sync_env_cli/: __main__.py
sync_env_cli/src/sync_env_cli/lib/: args_input.py  backups.py  env_modes.py  repo_files.py  update_env.py
(+854 files in other folders)
