[project]
name = "sync-env-cli"
version = "1.0.0"
description = ""
authors = [
    {name = "AlexanderMatveev2908",email = "matveevalexander470@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "sync_env_cli", from = "src"}]


[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
